@@ -1295,8 +1295,8 @@ CHANNELS=\
 # Including "REPLYSELF=NAME" with the name of a journal, ALL, or a user, will automatically
 # send the message to that destination when one replies to a message that is both from and to
 # the replyer.
-# Including "REPLYALL=NAME" with the name of a journal, ALL, FROM, or a user, will automatically
-# send the message to that destination when one replies to a message that is to ALL. 
+# Including "REPLYALL=NAME" with the name of a journal, ALL, FROM, MAILBOX, or a user, will 
+# automatically send the message to that destination when one replies to a message that is to ALL. 
 # Including "ASSIGN=NAME1:NAME2" with a colon-delimited list of arbitrary names allows messages to
 # be transferred to those names, thus acting as categories.
 # Including "MOTD" with any value forces user to be prompted at login when they have messages assigned.
