@@ -6,6 +6,7 @@
   5. Added new GMODIFY fields: RESOURCE (string substitute for MATERIAL), and MATERIALTYPE
   6. New standard races: Pegasus, Pegacorn
   7. Improvements to glassblowing and boatwright recipes.
+  8. Journal messages can now be forwarded to the senders game mailbox, even if smtp server isn't running.
 
 # Build 5.9.7 Release 08/29/2018
    1. Scholars gain XP from visiting bookstores, and can study dissertations.
